aionbook_theme/css/course.css
.course-carousel {
    display: flex;
    justify-content: center;
    align-items: center;
    padding: 40px 0;
    background-color: #f0f0f0;
}

.carousel {
    position: relative;
    width: 100%;
    max-width: 1200px;
    height: 500px;
    overflow: hidden;
}

.carousel-inner {
    display: flex;
    transition: transform 0.5s ease;
}

.card {
    flex: 0 0 360px;
    height: 450px;
    margin: 0 20px;
    background-color: white;
    border-radius: 10px;
    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
    transition: all 0.3s ease;
    cursor: pointer;
    overflow: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
}

.card:hover {
    transform: scale(1.05);
}

/* .card.active {
    flex: 0 0 350px;
    height: 450px;
} */

.card-content {
    /* padding: 20px; */
    display: flex;
    flex-direction: column;
    height: 100%;
}

.card-image {
    width: 100%;
    height: 304px;
    overflow: hidden;
}

.card-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}


.card h2 {
    margin-top: 15px;
    font-size: 24px;
    line-height: 1.2;
    font-weight: 700;
    color: #242E64;
}

.card p {
    margin-top: 10px;
    padding: 10px;
    font-size: 18px;
    line-height: 24px;
    font-weight: 500;
    color: #323232;
    flex-grow: 1;
}

.card .button {
    display: inline-block;
    padding:  12px 20px;
    background-color: white;
    color: #6200ea;
    text-decoration: none;
    border-radius: 100px;
    border: 1px solid #D3D3D3;
    transition: all 0.3s ease;
    text-align: center;
    margin-top: auto;
    font-weight: 600;
}

.card .button:hover {
    background-color: #6200ea;
    color: white;
}

.locked::after {
    content: '🔒';
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: rgba(0, 0, 0, 0.7);
    display: flex;
    justify-content: center;
    align-items: center;
    font-size: 48px;
    color: white;
}

.arrow {
    position: absolute;
    top: 50%;
    transform: translateY(-50%);
    width: 50px;
    height: 50px;
    background-color: white;
    border-radius: 50%;
    display: flex;
    justify-content: center;
    align-items: center;
    cursor: pointer;
    font-size: 24px;
    color: #333;
    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
    z-index: 10;
    transition: all 0.3s ease;
}

.arrow-left {
    left: 1px;
}

.arrow-right {
    right: 1px;
}

